@@ -19,6 +19,7 @@ S3method(scale_type,logical)
 S3method(scale_type,numeric)
 export(CoordTern)
 export(GeomConfidenceTern)
+export(GeomCrosshairTern)
 export(GeomDensityTern)
 export(GeomErrorbarl)
 export(GeomErrorbarr)
@@ -62,6 +63,7 @@ export(geom_Tisoprop)
 export(geom_Tline)
 export(geom_confidence)
 export(geom_confidence_tern)
+export(geom_crosshair_tern)
 export(geom_density_tern)
 export(geom_errorbarL)
 export(geom_errorbarR)
