@@ -1,6 +1,2 @@
-KNOWN BUGS
-* Create predictdf2d method for use in stat_interpolate_tern, equivalent to predictdf in stat-smooth-methods.r in ggplot2
-
 GEOMETRIES
 * Ternary heatmap: http://stackoverflow.com/questions/26221236/ternary-heatmap-in-r/33021871#33021871
-* Ternary crosshairs
